--- a/src/components/editorToolbar/EditorToolbar.css
+++ b/src/components/editorToolbar/EditorToolbar.css
@@ -1,4 +1,4 @@
-#control {
+.control {
   background-color: #fff;
   height: 40px;
   display: flex;
@@ -7,7 +7,7 @@
   padding-top: 5px;
 }
 
-#control__wrapper {
+.control__wrapper {
   width: 600px;
   display: flex;
   justify-content: center;
