--- a/src/components/textEditor/TextEditor.css
+++ b/src/components/textEditor/TextEditor.css
@@ -1,4 +1,4 @@
-#file-zone {
+.textEditor {
     background-color:#f1f0f0;
     flex-grow: 1;
     display: flex;
@@ -7,7 +7,7 @@
     padding: 5px;
 }
 
-#file {
+.textEditor__content {
     width: 600px;
     flex-grow: 1;
     margin-bottom: 30px;
